--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -38,6 +38,10 @@ body {
     margin-bottom: 20px;
 }
 
+.form h3 {
+    text-align: center;
+}
+
 .form-field {
     margin-bottom: 5px;
 }
@@ -48,7 +52,7 @@ body {
     margin-bottom: 5px;
 }
 
-.form-field input {
+.form-field button, input {
     border: solid 2px #f0f0f0;
     border-radius: 3px;
     padding: 10px;
@@ -72,19 +76,19 @@ body {
     outline: none;
 }
 
-.form-field.error input{
+.form-field.error input {
     border-color: var(--error-color);
 }
 
-.form-field.success select{
+.form-field.success select {
     border-color: var(--success-color);
 }
 
-.form-field.error select{
+.form-field.error select {
     border-color: var(--error-color);
 }
 
-.form-field.success input{
+.form-field.success input {
     border-color: var(--success-color);
 }
 
@@ -92,41 +96,10 @@ body {
     color: var(--error-color);
 }
 
-.pull-right {
-    float: right;
+.error {
+    border-color: var(--error-color);
 }
 
-.table {
-    display: table;
-    width: 100%;
-    padding-bottom: 10px;
-}
-
-.student:last-child .table {
-    padding-bottom: 0;
-}
-
-.table .cell {
-    display: table-cell;
-    vertical-align: top;
-}
-
-.btn {
-    border: solid 2px #f0f0f0;
-    border-radius: 3px;
-    padding: 10px;
-    margin-bottom: 5px;
-    display: block;
-}
-
-.btn-danger {
-    color: #fff;
-    background-color: #d9534f;
-    border-color: #d43f3a;
-}
-
-.btn-success {
-    color: #fff;
-    background-color: #5cb85c;
-    border-color: #4cae4c;
+.success {
+    border-color: var(--success-color);
 }
