--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -1,105 +1,27 @@
-:root {
-    --error-color: #dc3545;
-    --success-color: #28a745;
-    --warning-color: #ffc107;
-}
-
-* {
-    margin: 0;
-    padding: 0;
-}
-
 body {
-    font-size: 16px;
-    background-color: #f4f4f4;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    min-height: 100vh;
-    margin: 0;
+    background-color: #C0C0C0;
 }
 
-.container {
-    background-color: #fff;
-    padding: 1em;
-    border-radius: 5px;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
-    width: 400px;
+.btn-group a {
+    background-color: #F0E68C;
+    border: 1px solid #000000;
+    color: #000000;
+    padding: 10px 24px;
+    cursor: pointer;
+    float: left;
+    margin-bottom: 10px;
+    text-decoration: none;
+    font-weight: bold;
 }
 
-.form {
-    padding: 10px 20px;
+.btn-group button:not(:last-child) {
+    border-right: none;
 }
 
-.form h1 {
-    font-size: 1.5em;
-    text-align: center;
-    margin-bottom: 20px;
+.pagination li:hover{
+    cursor: pointer;
 }
 
-.form h3 {
-    text-align: center;
-}
-
-.form-field {
-    margin-bottom: 5px;
-}
-
-.form-field label {
-    display: block;
-    color: #777;
-    margin-bottom: 5px;
-}
-
-.form-field button, input {
-    border: solid 2px #f0f0f0;
-    border-radius: 3px;
-    padding: 10px;
-    margin-bottom: 5px;
-    font-size: 14px;
-    display: block;
-    width: 100%;
-}
-
-.form-field select {
-    border: solid 2px #f0f0f0;
-    border-radius: 3px;
-    padding: 10px;
-    margin-bottom: 5px;
-    font-size: 14px;
-    display: block;
-    width: 100%;
-}
-
-.form-field input:focus {
-    outline: none;
-}
-
-.form-field.error input {
-    border-color: var(--error-color);
-}
-
-.form-field.success select {
-    border-color: var(--success-color);
-}
-
-.form-field.error select {
-    border-color: var(--error-color);
-}
-
-.form-field.success input {
-    border-color: var(--success-color);
-}
-
-.form-field small {
-    color: var(--error-color);
-}
-
-.error {
-    border-color: var(--error-color);
-}
-
-.success {
-    border-color: var(--success-color);
+#books tr {
+    display: none;
 }
