--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -1,5 +1,9 @@
 body {
     background-color: #C0C0C0;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    /*align-items: center;*/
 }
 
 .btn-group a {
@@ -16,12 +20,4 @@ body {
 
 .btn-group button:not(:last-child) {
     border-right: none;
-}
-
-.pagination li:hover{
-    cursor: pointer;
-}
-
-#books tr {
-    display: none;
 }
