--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -1,9 +1,8 @@
 body {
-    background-color: #C0C0C0;
+    background-color: #D3D3D3;
     display: flex;
     flex-direction: column;
     justify-content: center;
-    /*align-items: center;*/
 }
 
 .btn-group a {
@@ -20,4 +19,12 @@ body {
 
 .btn-group button:not(:last-child) {
     border-right: none;
+}
+
+#header {
+    display: block;
+    width: 100%;
+    height: 50px;
+    margin-bottom: 5px;
+    z-index: 100;
 }
