--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -28,3 +28,10 @@ body {
     margin-bottom: 5px;
     z-index: 100;
 }
+
+.popular {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    font-size: 18px;
+}
